hero collapse fix

--- a/index.css
+++ b/index.css
@@ -343,20 +343,19 @@ header .btn {
 }
 
 .bhcoe_dropdown {
-  padding: 8px 8px 24px 24px !important ;
-  gap: 8px !important;
-  position: absolute !important;
-  width: 332px !important;
-  height: 172px !important;
-  right: -7px !important;
+  padding: 8px 8px 24px 24px ;
+  gap: 8px ;
+  position: absolute ;
+  width: 332px ;
+  height: 172px ;
+  right: -7px ;
   /* margin-top: 116px !important; */
-  top: 116px !important;
-  background: #FFFFFF !important;
-  box-shadow: 0px 12px 32px rgba(0, 0, 0, 0.08) !important;
-  border-radius: 16px !important;
-  display: flex !important;
-  flex-direction: column !important;
-  cursor: pointer !important;
+  top: 116px ;
+  background: #FFFFFF ;
+  box-shadow: 0px 12px 32px rgba(0, 0, 0, 0.08) ;
+  border-radius: 16px ;
+  display: flex ;
+  flex-direction: column ;
 }
 
 .bhcoe_dropdown span img {
@@ -575,7 +574,7 @@ header .btn {
   padding: 0.5rem 1.25rem 0.5rem 3.75rem;
   margin-top: clamp(35px, 1vh, 3.125rem);
   /* position: relative !important; */
-
+  cursor: pointer !important;
   right: -1%;
 }
 
